2008-02-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaybin2.c: (gst_play_bin_set_property):
	Enable vis setting.

	* gst/playback/gstplaysink.c: (gst_play_sink_init),
	(gst_play_sink_dispose), (gst_play_sink_vis_unblocked),
	(gst_play_sink_vis_blocked), (gst_play_sink_set_vis_plugin),
	(gen_vis_chain):
	Implement vis switching while playing.

2008-02-28  David Schleef  <ds@schleef.org>

	* gst-libs/gst/riff/riff-media.c: Add Dirac mapping

2008-02-28  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Peter Kjellerstedt  <pkj at axis com>

	* gst/tcp/Makefile.am:
	* gst/tcp/fdsetstress.c:
	* gst/tcp/gstfdset.c:
	* gst/tcp/gstfdset.h:
	Removed fdset and stress test, they are now known as GstPoll in
	core. 

	* gst/tcp/gstmultifdsink.c: (gst_multi_fd_sink_class_init),
	(gst_multi_fd_sink_add_full), (gst_multi_fd_sink_remove),
	(gst_multi_fd_sink_clear), (gst_multi_fd_sink_remove_client_link),
	(gst_multi_fd_sink_handle_client_write),
	(gst_multi_fd_sink_queue_buffer),
	(gst_multi_fd_sink_handle_clients), (gst_multi_fd_sink_start),
	(gst_multi_fd_sink_stop):
	* gst/tcp/gstmultifdsink.h:
	* gst/tcp/gsttcp.c: (gst_tcp_socket_read), (gst_tcp_socket_close),
	(gst_tcp_read_buffer), (gst_tcp_gdp_read_buffer),
	(gst_tcp_gdp_read_caps):
	* gst/tcp/gsttcp.h:
	* gst/tcp/gsttcpclientsink.c: (gst_tcp_client_sink_init),
	(gst_tcp_client_sink_setcaps), (gst_tcp_client_sink_render),
	(gst_tcp_client_sink_start), (gst_tcp_client_sink_stop):
	* gst/tcp/gsttcpclientsink.h:
	* gst/tcp/gsttcpclientsrc.c: (gst_tcp_client_src_init),
	(gst_tcp_client_src_create), (gst_tcp_client_src_start),
	(gst_tcp_client_src_stop), (gst_tcp_client_src_unlock):
	* gst/tcp/gsttcpclientsrc.h:
	* gst/tcp/gsttcpserversink.c: (gst_tcp_server_sink_handle_wait),
	(gst_tcp_server_sink_init_send), (gst_tcp_server_sink_close):
	* gst/tcp/gsttcpserversink.h:
	* gst/tcp/gsttcpserversrc.c: (gst_tcp_server_src_init),
	(gst_tcp_server_src_create), (gst_tcp_server_src_start),